2012-08-15  Maxim Kuvyrkov  <maxim@codesourcery.com>

	* pthread_spin_lock.c: New file.
	* pthread_spin_trylock.c: New file.

2012-08-08  Joseph Myers  <joseph@codesourcery.com>

	* allocatestack.c (setxid_signal_thread) [__ASSUME_TGKILL]: Make
	code unconditional.
	(setxid_signal_thread) [!__ASSUME_TGKILL]: Remove conditional code.
	* pthread_cancel.c (pthread_cancel) [__ASSUME_TGKILL]: Make code
	unconditional.
	(pthread_cancel) [!__ASSUME_TGKILL]: Remove conditional code.
	* sysdeps/pthread/createthread.c (do_clone) [__ASSUME_TGKILL]:
	Make code unconditional.
	(do_clone) [!__ASSUME_TGKILL]: Remove conditional code.
	* sysdeps/unix/sysv/linux/pt-raise.c (raise) [__ASSUME_TGKILL ||
	__NR_tgkill]: Make code unconditional.
	(raise) [__ASSUME_TGKILL]: Likewise.
	(raise) [!__ASSUME_TGKILL]: Remove conditional code.
	* sysdeps/unix/sysv/linux/pthread_kill.c (__pthread_kill)
	[__ASSUME_TGKILL]: Make code unconditional.
	(__pthread_kill) [!__ASSUME_TGKILL]: Remove conditional code.
	* sysdeps/unix/sysv/linux/raise.c (raise) [__ASSUME_TGKILL ||
	__NR_tgkill]: Make code unconditional.
	(raise) [__ASSUME_TGKILL]: Likewise.
	(raise) [!__ASSUME_TGKILL]: Remove conditional code.

2012-08-07  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/pthread/createthread.c (create_thread)
	[!__ASSUME_NO_CLONE_DETACHED]: Remove conditional code.

2012-08-03  Joseph Myers  <joseph@codesourcery.com>

	* nptl-init.c (sigcancel_handler) [__ASSUME_CORRECT_SI_PID]: Make
	code unconditional.
	(sighandler_setxid) [__ASSUME_CORRECT_SI_PID]: Likewise.

2012-07-28  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* tst-pthread-getattr.c (MAX_STACK_SIZE): New macro.
	(pagesize): New static variable.
	(allocate_and_test): Return MEM.  Rename parameter to TARGET.
	(check_stack_top): New local variables MEM and PAGEMASK.  Cap
	stack size to MAX_STACK_SIZE.  Call allocate_and_test for
	halfway up the stack top page.  Verify that the top page was
	written into.
	(do_test): Get pagesize using sysconf.
